2008-02-11  Adam Schreiber  <sadam@clemson.edu>

    * plugins/applet/docs/C/seahorse-applet.xml: Update applet manual. 
    Patch by Jasper Lievisse Adriaanse.  Fixes bug #507092

2008-02-04  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-gkeyring-item-properties.glade:
    * src/seahorse-pgp-private-key-properties.glade:
    * src/seahorse-pgp-public-key-properties.glade:
    * src/seahorse-ssh-key-properties.glade:  Add comments for translators.
    Fixes bug #514276

2008-01-30  Adam Schreiber  <sadam@clemson.edu>

    * configure.in: Bump version number

=== seahorse 2.21.90 ===

2008-01-30  Adam Schreiber  <sadam@clemson.edu>

    * NEWS
    * README: Release version 2.21.91

2008-01-30  Adam Schreiber  <sadam@clemson.edu>

    * configure.in:
    * plugins/epiphany/seahorse-extension.c: Fix building with new Epiphany API.
    Fixes bug #512837

2008-01-29  Adam Schreiber  <sadam@clemson.edu>

    * configure.in: more epiphany configure changes

2008-01-28  Stef Walter  <stef@memberwebs.com>

    * configure.in: Bump version number

=== seahorse 2.21.90 ===

2008-01-28  Stef Walter  <stef@memberwebs.com>

    * configure.in:
    * Makefile.am:
    * NEWS
    * README: Release version 2.21.90

2008-01-28  Stef Walter  <stef@memberwebs.com>
    
    * agent/seahorse-agent.desktop.in.in: (deleted)
    * po/POTFILES.in:
    * agent/Makefile.am: More cleanup for Adam's last revert below.
    
2008-01-28  Stef Walter  <stef@memberwebs.com>

	* agent/seahorse-agent-main.c:
	* agent/seahorse-agent.c:
	* agent/seahorse-agent.h: Remove option to munge gpg.conf on startup
	from seahorse-agent.
	
2008-01-28  Stef Walter  <stef@memberwebs.com>

    * libseahorse/seahorse-prefs.glade:
    * libseahorse/seahorse-prefs-cache.c: Remove option to start agent 
    from preferences dialog.  
    
2008-01-28  Stef Walter  <stef@memberwebs.com>

    * configure.in:
    * INSTALL:
    * daemon/seahorse-hkp-server.c:
    * libseahorse/seahorse-hkp-source.c: