@@ -15,7 +15,7 @@
 	<articleinfo>
 		<title>&app; Manual</title>
 		<copyright>
-			<year>2005, 2006</year>
+			<year>2005, 2006, 2007, 2008</year>
 			<holder>Jacob Perkins and Adam Schreiber</holder>
 		</copyright>
 		<publisher role="maintainer">
@@ -286,7 +286,7 @@
       <orderedlist>
 	<listitem>
 	  <para>
-	    Choose <menuchoice><guimenu>Key</guimenu><guimenuitem>Create Key Pair</guimenuitem></menuchoice>
+	    Choose <menuchoice><guimenu>Key</guimenu><guimenuitem>Create New Key</guimenuitem></menuchoice>
 	  </para>
 	</listitem>
 	<listitem>
@@ -417,7 +417,7 @@
     </para>
     <orderedlist>
       <listitem>
-        <para>Choose <menuchoice><guimenu>Key</guimenu><guimenuitem>Create Key Pair</guimenuitem></menuchoice></para>
+        <para>Choose <menuchoice><guimenu>Key</guimenu><guimenuitem>Create New Key</guimenuitem></menuchoice></para>
       </listitem>
       <listitem>
         <para>Select <guilabel>Secure Shell Key</guilabel> and click <guibutton>Continue</guibutton></para>
@@ -1740,10 +1740,11 @@
     <sect1 id="about">
     <title>About &app;</title>
     <para> 
-      <application>&app;</application>, its associated plugins, the preferences applet and the panel applet are known collectively as &project;. &project; was written by Jacob Perkins. The current maintainer is Stef 
-      Walter. This manual is by Adam Schreiber. The project's web site was designed 
-      by Jim Pharis. To find more information about &project;, the project , please visit the 
-      <ulink url="http://www.gnome.org/projects/seahorse/" type="http">&project; web page</ulink>.
+      <application>&app;</application>, its associated plugins, the preferences applet and the panel 
+      applet are known collectively as &project;. &project; was written by Jacob Perkins. The current 
+      maintainers are Stef Walter and Adam Schreiber. This manual is by Adam Schreiber. The project's web 
+      site was designed by Jim Pharis. To find more information about &project;, the project , please visit 
+      the <ulink url="http://www.gnome.org/projects/seahorse/" type="http">&project; web page</ulink>.
     </para>
     <para>
       To report a bug or make a suggestion regarding this application or
