@@ -1,5 +1,7 @@
 2008-02-11  Adam Schreiber  <sadam@clemson.edu>
 
+    * help/C/seahorse.xml: Change menu strings for key generation.
+    Fixes bug #503704
     * plugins/applet/docs/C/seahorse-applet.xml: Update applet manual. 
     Patch by Jasper Lievisse Adriaanse.  Fixes bug #507092
 
